# rules_sh

./: .bazelrc  .gitignore  .mergify.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  MAINTAINERS.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.bcr/: metadata.template.json
.buildkite/: pipeline.yml  run-pipeline
.buildkite/image/: Dockerfile
.github/: CODEOWNERS  renovate.json
.github/actions/run_bazel_test/: action.yaml  run_bazel_test.sh
.github/actions/write_bazelrc/: action.yaml
.github/workflows/: release.yaml  release_prep.sh  workflow.yaml
bzlmod/: extensions.bzl
sh/: BUILD.bazel  import.bzl  posix.bzl  repositories.bzl  sh.bzl  unix.bzl
sh/docs/: BUILD.bazel  func.vm  header.vm
sh/experimental/: BUILD.bazel  posix_hermetic.bzl
sh/posix/: BUILD.bazel
sh/private/: BUILD.bazel  defs.bzl  get_cpu_value.bzl  posix.bzl
sh/unix/: BUILD.bazel
tests/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  posix_tests.bzl  tools  unix_tests.bzl
tests/bzlmod/: extensions.bzl
tests/import/: BUILD.bazel  create_shim_test.sh  get_cpu_value.bzl  import_test.bzl  invoke_shim_test.sh
tests/posix_hermetic/: BUILD.bazel  custom_rule_output_test.sh  echo.sh  echo_data.txt  false.cc  false.sh  genrule_explicit_output_test.sh  genrule_path_output_test.sh  posix_hermetic_test.bzl  runfiles_custom_rule_test.sh  runfiles_genrule_test.sh  true.cc  true.sh  unrecognized.sh
tests/sh_binaries/: BUILD.bazel  custom_rule_test.sh  genrule_test.sh  hello_data.sh  hello_world.sh  sh_binaries_test.bzl
tools/: bazel  bazel.bat  bazel.ps1  bazel_wrapper.ps1
