load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# @bazel_tools//tools does not define a bzl_library itself, instead we are
# supposed to define our own using the @bazel_tools//tools:bzl_srcs filegroup.
# See https://github.com/bazelbuild/skydoc/issues/166
bzl_library(
    name = "bazel_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "repositories",
    srcs = [
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools",
    ],
)

bzl_library(
    name = "sh",
    srcs = [
        "sh.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:dicts",
        "//sh/private:defs",
    ],
)

bzl_library(
    name = "posix",
    srcs = [
        "posix.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools",
        "//sh/private:posix",
        "@bazel_skylib//lib:paths",
    ],
)

exports_files([
    "posix.bzl",
    "repositories.bzl",
])
