module(name = "rules_sh_tests")

bazel_dep(name = "rules_sh", version = "0.3.0")
local_path_override(
    module_name = "rules_sh",
    path = "..",
)

bazel_dep(name = "bazel_skylib", version = "1.2.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "stardoc", version = "0.5.1", repo_name = "io_bazel_stardoc")

tests_configure = use_extension("//bzlmod:extensions.bzl", "tests_configure")
use_repo(
  tests_configure,
  "rules_sh_import_test_create_shim_test_source",
  "rules_sh_import_test_create_shim_test_shim",
  "rules_sh_import_test_invoke_shim_test_powershell",
  "rules_sh_shim_exe",
)
