module(name = "rules_sh_tests")

bazel_dep(name = "rules_sh", version = "0.0.0")
local_path_override(
    module_name = "rules_sh",
    path = "..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "stardoc", version = "0.6.2", repo_name = "io_bazel_stardoc")

sh_configure = use_extension("@rules_sh//bzlmod:extensions.bzl", "sh_configure")
use_repo(sh_configure, "local_posix_config", "rules_sh_shim_exe")

tests_configure = use_extension("//bzlmod:extensions.bzl", "tests_configure")
use_repo(
  tests_configure,
  "rules_sh_import_test_create_shim_test_source",
  "rules_sh_import_test_create_shim_test_shim",
  "rules_sh_import_test_invoke_shim_test_powershell",
)
