load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":defs.bzl", "bool_constant")

bool_constant(
    name = "is_windows",
    value = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = [
        "defs.bzl",
    ],
    deps = [
        "@bazel_skylib//lib:dicts",
    ],
    visibility = ["//sh:__subpackages__"],
)

bzl_library(
    name = "posix",
    srcs = [
        "posix.bzl",
    ],
    visibility = ["//sh:__subpackages__"],
)
